--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Armish Naseer Hashmi
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Daily Blogs
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://www.ladbible.com/entertainment/latest-lola-bunny-has-been-reworked-for-space-jam-2-20210305
 
 #
 # Flags below are optional
