--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Armish Naseer Hashmi
 description: Daily Blogs
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://www.ladbible.com/entertainment/latest-lola-bunny-has-been-reworked-for-space-jam-2-20210305
+avatar: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSCMlTXWGOXhA1pO6DnnSOJqqRiHDn2YaGmBA&usqp=CAU
 
 #
 # Flags below are optional
